# goit-pycore-final-project

./: .gitignore  README.md  address_book.py  general.py  main.py  note_book.py  personal_assistant.py  personal_assistant_address_book_handler.py  personal_assistant_handler.py  pyproject.toml
src/: __init__.py  address_book.py  general.py  main.py  note_book.py  personal_assistant.py  personal_assistant_address_book_handler.py  personal_assistant_note_book_handler.py
